# Django-Ecommerce-DRF

./: .env-sample  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  secret.py
core/: admin.py  serializer.py  urls.py  views.py
core/signals/: handlers.py
core/templates/emails/: sending-email.html
ecommerce/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ecommerce/settings/: common.py  dev.py  prod.py
likes/: admin.py  models.py  views.py
locustfiles/: browse_products.py
store/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializer.py  urls.py  validators.py  views.py
store/signals/: __init__.py
store/static/store/: styles.css
store/templates/store/: index.html
store/tests/: conftest.py  test_collections.py  test_products.py
tags/: admin.py  models.py
