[tool.poetry]
name = "django-ecommerce-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
psycopg = "^3.2.3"
pillow = "^11.0.0"
django-debug-toolbar = "^4.4.6"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-nested-routers = "^0.94.1"
djoser = "^2.3.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
